samples/_failures_safe/1761214694_936722_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cecb3d30.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_cecb3d30.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_cecb3d30.c:164:5: error: expected declaration or statement at end of input
  164 |     if
      |     ^~
